--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
         <ul>
         {% for item in site.data.navigation %}
         <li>
-            <a href="{{ item.url }}">{{ item.title }}</a>
+            <a href="{{ item.url }}" class="btn">{{ item.title }}</a>
         </li>
         {% endfor %}
 </ul>
