--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,14 +22,12 @@
             <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
           {% endif %}
           <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-        <ul>
+          
         {% for item in site.data.navigation %}
-        <li>
-            <a href="{{ item.url }}" class="btn">{{ item.title }}</a>
-        </li>
+            <a href="{{ item.url }}">{{ item.title }}</a>
         {% endfor %}
-</ul>
+        </section>
+
       </div>
     </header>
 
