--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,9 @@
           <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
           
         {% for item in site.data.navigation %}
-            <a href="{{ item.url }}">{{ item.title }}</a>
+            <a href="{{ item.url }}" class="btn">{{ item.title }}</a>
         {% endfor %}
+          
         </section>
 
       </div>
