--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,4 +49,7 @@
       </script>
     {% endif %}
   </body>
+  <footer>
+    <p><img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="16" height="16" alt="cc0"> All rights waived. <a href="https://sops.github.io">sops</a></p>
+</footer>
 </html>
