--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,8 @@
     {% endif %}
   </body>
   <footer>
-    <p><img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="16" height="16" alt="cc0"> All rights waived. <a href="https://sops.github.io">sops</a></p>
+    <div class="container">
+        <h2><p><img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="16" height="16" alt="cc0"> All rights waived. <a href="https://sops.github.io">sops</a></p></h2>
+      </div>
 </footer>
 </html>
