--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,7 +10,7 @@
 footer {
   background: rgba(0, 0, 0, 0.1);
   width: 100%;
-  border-bottom: 1px dashed $conifer; //footer;
+  border-top: 1px dashed $conifer; //footer;
   padding: 20px 0;
   margin: 0 0 40px 0;
 }
@@ -34,7 +34,8 @@ footer h1:before {
 }
 
 footer h2 {
+  content: "./ ";
   font-size: 18px;
   font-weight: 300;
-  color: #666;
+  color: $conifer;
 }
