--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,11 @@
   </body>
   <footer>
     <div class="container">
-        <h2><p><img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="16" height="16" alt="cc0"> All rights waived. <a href="https://sops.github.io">sops</a></p></h2>
+        <h2>
+          <p>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" alt="cc0">All rights waived.<a href="https://sops.github.io">sops</a>
+          </p>
+      </h2>
       </div>
 </footer>
 </html>
