--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
     <div class="container">
         <h2>
           <p>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" alt="cc0">All rights waived.<a href="https://sops.github.io">sops</a>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="20" height="20" align="middle" alt="cc0"> All rights waived. <a href="https://sops.github.io">sops</a>
           </p>
       </h2>
       </div>
